@@ -1,3 +1,11 @@
+2005-07-14  Adele Peterson  <adele@apple.com>
+
+        Merged fix for :
+        <rdar://problem/4118278> mail divide by zero navigating messages
+
+        * WebCoreSupport.subproj/WebTextRenderer.m:
+        (-[WebTextRenderer _extendGlyphToWidthMapToInclude:font:]):
+
 === WebKit-412.0.2 ===
 
 2005-07-08  Justin Garcia  <justin.garcia@apple.com>
